--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3231757272";
+    const serviceWorkerVersion = "462005151";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
-  <script type="application/javascript" src="web_support.js"
+  <script type="application/javascript" src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js"
     defer></script>
   <!-- ... -->
 </head>
